--- a/app/views/admin/jargons/_form.html.erb
+++ b/app/views/admin/jargons/_form.html.erb
@@ -16,9 +16,9 @@
   </div>
 
   <div class="form-group row">
-    <%= form.label :radio_id, class: 'col-2 col-form-label' %>
+    <%= form.label :radio, class: 'col-2 col-form-label' %>
     <div class="col-10">
-      <%= form.select :radio_id, Radio.pluck(:title, :id), class: 'form-control' %>
+      <%= form.select :radio, Radio.pluck(:title, :id), class: 'form-control' %>
     </div>
   </div>
 
