--- a/app/views/admin/jargons/index.html.erb
+++ b/app/views/admin/jargons/index.html.erb
@@ -5,7 +5,7 @@
     <h1>専門用語一覧</h1>
   </div>
   <div class="col-4">
-    <%= link_to '新規専門用語作成', new_admin_jargon_path, class: 'btn btn-primary' %>
+    <%= Admin::JargonViewObject.link_to_new(current_personality) %>
   </div>
 </div>
 
@@ -14,7 +14,7 @@
     <tr>
       <th><%= Jargon.human_attribute_name('name') %></th>
       <th><%= Jargon.human_attribute_name('description') %></th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -23,9 +23,11 @@
       <tr>
         <td><%= jargon.name %></td>
         <td><%= truncate(jargon.description) %></td>
-        <td><%= link_to '詳細', admin_jargon_path(jargon) %></td>
-        <td><%= link_to '編集', edit_admin_jargon_path(jargon) %></td>
-        <td><%= link_to '削除', admin_jargon_path(jargon), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= Admin::JargonViewObject.link_to_show(current_personality, jargon) %>
+          <%= Admin::JargonViewObject.link_to_edit(current_personality, jargon) %>
+          <%= Admin::JargonViewObject.link_to_destroy(current_personality, jargon) %>
+        </td>
       </tr>
     <% end %>
   </tbody>
