--- a/app/views/admin/shared/_markdown_help.html.erb
+++ b/app/views/admin/shared/_markdown_help.html.erb
@@ -1,4 +1,4 @@
-<a data-content='
+<a data-html="true" data-placement="bottom" data-toggle="popover" title="markdownチートシート" data-content='
 <div style="display: grid; grid-template-rows: 100px 50px; grid-template-columns: 250px 250px;">
   <div style="grid-row: 1 / 3; grid-column: 1 / 2;">
       <pre>
@@ -95,8 +95,7 @@ normal __bold__ normal
     <hr>
   </div>
   </div>
-'
-   data-html="true" data-placement="bottom" data-toggle="popover" title="markdownチートシート">
+'>
   <span style="cursor: pointer;" class="badge badge-pill badge-info">markdownチートシート</span>
 </a>
 
